# compliance_agent_hackathon

./: .gitignore  LICENSE  NOTICE .md  README.md  health_check.py  package-lock.json  requirements.txt
.github/scripts/: oxbuild_annotate.py  oxbuild_ci.py
.github/workflows/: oxbuild-scan.yml
cloud_orchestrator/: main.py
cloud_orchestrator/agents/: pipeline.py
cloud_orchestrator/core/: config.py  schemas.py
cloud_orchestrator/utils/: pdf_reporter.py  prompts.py
deployment/: Procfile (1)
local_bridge/api/: oxlo_client.py
local_bridge/core/: CMakeLists.txt  reconstructor.py  scanner.cpp  scanner_wrapper.py  setup.py  state_manager.py
local_bridge/ui/: index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js  vite.config.js
local_bridge/ui/electron/: main.cjs  preload.cjs
local_bridge/ui/release/: Oxbuild Compliance Agent Setup 1.0.0.exe.blockmap  builder-effective-config.yaml
local_bridge/ui/release/win-unpacked/resources/: app.asar
local_bridge/ui/src/: App.jsx  Main.jsx  index.css
my-compliance-app/: index.html  package-lock.json  package.json
test sample codes/: sample_01_django_healthcare_api.py  sample_02_nodejs_payment_gateway.js  sample_03_python_user_auth_service.py  sample_04_typescript_user_dashboard.ts  sample_05_python_data_pipeline.py  sample_06_nodejs_graphql_api.js  sample_07_python_ml_training_pipeline.py  sample_08_nodejs_file_upload_service.js  sample_09_python_compliant_baseline.py  sample_10_nodejs_iot_telemetry_service.js  sample_11_python_data_layer.py  sample_12_nodejs_payment_handler.js  sample_13_django_healthcare.py  sample_14_typescript_frontend (1).ts  sample_15_compliant_baseline.py
